--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -90,12 +90,9 @@
             <a href="./index.html" class="menu-link-breadcrumbles">Главная</a>
             <span class="arrow-menu-breadcrumbles"> </span>
           </li>
+
           <li class="menu-list-breadcrumbles">
-            <a href="#" class="menu-link-breadcrumbles">Экскурсии</a>
-            <span class="arrow-menu-breadcrumbles"></span>
-          </li>
-          <li class="menu-list-breadcrumbles">
-            <a href="#" class="menu-link-breadcrumbles-bold">1-4 класс</a>
+            <a href="#" class="menu-link-breadcrumbles-bold">Отзывы</a>
           </li>
         </ul>
       </div>
@@ -106,7 +103,99 @@
 
       <div class="container">
         <h2 class="reviews-title">Отзывы</h2>
+
+        <div class="review-form-container">
+          <form action="" class="review-form">
+            <input
+              type="text"
+              class="author-name"
+              placeholder="Ваше имя"
+              id="form-review-author-name"
+            />
+            <input
+              type="tel"
+              placeholder="Ваш номер телефона (не публикуется)"
+              id="form-review-author-tel"
+            />
+            <input
+              type="text"
+              class="guide-name"
+              placeholder="Название экскурсии"
+              id="form-review-guide-name"
+            />
+            <textarea
+              class="review-desc"
+              placeholder="Ваш отзыв"
+              name="review-desc"
+              id="form-review-text-desc"
+            ></textarea>
+            <div class="form-btn">
+              <input
+                type="submit"
+                class="review-form-btn"
+                id="form-review-btn-submit"
+                value="Отправить отзыв"
+              />
+
+              <input
+                type="reset"
+                class="review-form-btn"
+                id="form-review-btn-reset"
+                value="Отмена"
+              />
+            </div>
+          </form>
+        </div>
         <div class="reviews-list">
+          <div class="review-cart">
+            <h5 class="review-author-name">Петров Петр Петрович</h5>
+            <h6 class="item-name">Мир глазами историка</h6>
+            <h6 class="guide-name">
+              <span class="span-guide-name">Гид:</span>
+              Иванов Иван Иванович
+            </h6>
+            <p class="review-text">
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+            </p>
+            <p class="review-date">28.11.2025</p>
+          </div>
+          <div class="review-cart">
+            <h5 class="review-author-name">Петров Петр Петрович</h5>
+            <h6 class="item-name">Мир глазами историка</h6>
+            <h6 class="guide-name">
+              <span class="span-guide-name">Гид:</span>
+              Иванов Иван Иванович
+            </h6>
+            <p class="review-text">
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+            </p>
+            <p class="review-date">28.11.2025</p>
+          </div>
+          <div class="review-cart">
+            <h5 class="review-author-name">Петров Петр Петрович</h5>
+            <h6 class="item-name">Мир глазами историка</h6>
+            <h6 class="guide-name">
+              <span class="span-guide-name">Гид:</span>
+              Иванов Иван Иванович
+            </h6>
+            <p class="review-text">
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+              Немного быстрого примера текста для построения на заголовке
+              карточки и составления основной части содержимого карточки.
+            </p>
+            <p class="review-date">28.11.2025</p>
+          </div>
           <div class="review-cart">
             <h5 class="review-author-name">Петров Петр Петрович</h5>
             <h6 class="item-name">Мир глазами историка</h6>
