--- a/reviewsPage.html
+++ b/reviewsPage.html
@@ -60,7 +60,7 @@
                     </details>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Блог</a>
+                    <a href="./blogPage.html" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
                     <a href="./reviewsPage.html" class="menu-link">Отзывы</a>
