--- a/blogPage.html
+++ b/blogPage.html
@@ -863,6 +863,82 @@
               </section>
             </details>
           </div>
+          <div class="item-cart">
+            <details class="item-list">
+              <summary class="item-title">Название статьи</summary>
+              <section class="item-desc">
+                <h3 class="hidden-section">section excurtions desc</h3>
+
+                <p class="item-text">
+                  Экскурсия построена по программе учебника «школа России» 4й
+                  класс Окружающий мир. Поговорим о о сложных науках «история» и
+                  «археология». Затронем и литературу. <br />Экскурсия построена
+                  по программе учебника «школа России» 4й класс Окружающий мир.
+                  Поговорим о о сложных науках «история» и «археология».
+                  Затронем и литературу.
+                </p>
+              </section>
+
+              <section class="gallery">
+                <h3 class="hidden-section">section excurtions gallery</h3>
+                <div class="gallery-container">
+                  <div
+                    id="carouselExampleAutoplaying"
+                    class="carousel slide"
+                    data-bs-ride="carousel"
+                  >
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img
+                          src="./img/item-primary-school-science1.jpeg"
+                          class="d-block w-100"
+                          alt="primary-school-science"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="./img/item-primary-school-science2.jpeg"
+                          class="d-block w-100"
+                          alt="primary-school-science"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="./img/item-primary-school-science3.jpeg"
+                          class="d-block w-100"
+                          alt="primary-school-science"
+                        />
+                      </div>
+                    </div>
+                    <button
+                      class="carousel-control-prev"
+                      type="button"
+                      data-bs-target="#carouselExampleAutoplaying"
+                      data-bs-slide="prev"
+                    >
+                      <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                      class="carousel-control-next"
+                      type="button"
+                      data-bs-target="#carouselExampleAutoplaying"
+                      data-bs-slide="next"
+                    >
+                      <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                      ></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+              </section>
+            </details>
+          </div>
         </div>
       </div>
     </main>
