--- a/categoryPage.html
+++ b/categoryPage.html
@@ -107,58 +107,58 @@
       <div class="container">
         <section class="items items-container">
           <h3 class="hidden-section">section excurtions</h3>
-
-          <a
-            href="./productPage.html"
-            class="link-item-cart-desc"
-            title="item-cart"
-          >
-            <div class="item-cart">
-              <div class="item-cart-img">
-                <div class="item-cart-desc">
-                  <p class="item-age">1-4 классы</p>
-                  <p class="item-time">~ 90 мин</p>
+          <div class="items-cart">
+            <a
+              href="./productPage.html"
+              class="link-item-cart-desc"
+              title="item-cart"
+            >
+              <div class="item-cart">
+                <div class="item-cart-img">
+                  <div class="item-cart-desc">
+                    <p class="item-age">1-4 классы</p>
+                    <p class="item-time">~ 90 мин</p>
+                  </div>
                 </div>
+
+                <h4 class="item-title">Урок «Мир глазами историка»</h4>
               </div>
+            </a>
 
-              <h4 class="item-title">Урок «Мир глазами историка»</h4>
-            </div>
-          </a>
-
-          <a
-            href="./productPage.html"
-            class="link-item-cart-desc"
-            title="item-cart"
-          >
-            <div class="item-cart">
-              <div class="item-cart-img">
-                <div class="item-cart-desc">
-                  <p class="item-age">1-4 классы</p>
-                  <p class="item-time">~ 90 мин</p>
+            <a
+              href="./productPage.html"
+              class="link-item-cart-desc"
+              title="item-cart"
+            >
+              <div class="item-cart">
+                <div class="item-cart-img">
+                  <div class="item-cart-desc">
+                    <p class="item-age">1-4 классы</p>
+                    <p class="item-time">~ 90 мин</p>
+                  </div>
                 </div>
+
+                <h4 class="item-title">Урок «Мир глазами историка»</h4>
               </div>
+            </a>
 
-              <h4 class="item-title">Урок «Мир глазами историка»</h4>
-            </div>
-          </a>
-
-          <a
-            href="./productPage.html"
-            class="link-item-cart-desc"
-            title="item-cart"
-          >
-            <div class="item-cart">
-              <div class="item-cart-img">
-                <div class="item-cart-desc">
-                  <p class="item-age">1-4 классы</p>
-                  <p class="item-time">~ 90 мин</p>
+            <a
+              href="./productPage.html"
+              class="link-item-cart-desc"
+              title="item-cart"
+            >
+              <div class="item-cart">
+                <div class="item-cart-img">
+                  <div class="item-cart-desc">
+                    <p class="item-age">1-4 классы</p>
+                    <p class="item-time">~ 90 мин</p>
+                  </div>
                 </div>
+
+                <h4 class="item-title">Урок «Мир глазами историка»</h4>
               </div>
-
-              <h4 class="item-title">Урок «Мир глазами историка»</h4>
-            </div>
-          </a>
-
+            </a>
+          </div>
           <div class="item-cart item-cart-details">
             <div class="item-cart-img">
               <div class="item-cart-desc">
@@ -363,25 +363,25 @@
                     class="carousel slide"
                     data-bs-ride="carousel"
                   >
-                    <div class="carousel-inner">
+                    <div class="carousel-inner carousel-item-border">
                       <div class="carousel-item active">
                         <img
                           src="./img/item-primary-school-science1.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
                           src="./img/item-primary-school-science2.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
                           src="./img/item-primary-school-science3.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
@@ -393,7 +393,7 @@
                       data-bs-slide="prev"
                     >
                       <span
-                        class="carousel-control-prev-icon"
+                        class="carousel-control-prev-icon arrow-left"
                         aria-hidden="true"
                       ></span>
                       <span class="visually-hidden">Previous</span>
@@ -405,7 +405,7 @@
                       data-bs-slide="next"
                     >
                       <span
-                        class="carousel-control-next-icon"
+                        class="carousel-control-next-icon arrow-right"
                         aria-hidden="true"
                       ></span>
                       <span class="visually-hidden">Next</span>
@@ -417,7 +417,7 @@
               <section class="reviews">
                 <h3 class="hidden-section">section excurtions reviews</h3>
 
-                <div class="reviews-container">
+                <div class="reviews-container container">
                   <h2 class="reviews-title">Отзывы</h2>
 
                   <div id="carouselExample" class="carousel slide">
@@ -442,9 +442,7 @@
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
-                              содержимого карточки. Немного быстрого примера
-                              текста для построения на заголовке карточки и
-                              составления основной части содержимого карточки.
+                              содержимого карточки.
                             </p>
                             <p
                               class="card-subtitle mb-2 text-body-secondary review-date"
@@ -751,25 +749,25 @@
                     class="carousel slide"
                     data-bs-ride="carousel"
                   >
-                    <div class="carousel-inner">
+                    <div class="carousel-inner carousel-item-border">
                       <div class="carousel-item active">
                         <img
                           src="./img/item-primary-school-science1.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
                           src="./img/item-primary-school-science2.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
                           src="./img/item-primary-school-science3.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
@@ -781,7 +779,7 @@
                       data-bs-slide="prev"
                     >
                       <span
-                        class="carousel-control-prev-icon"
+                        class="carousel-control-prev-icon arrow-left"
                         aria-hidden="true"
                       ></span>
                       <span class="visually-hidden">Previous</span>
@@ -793,7 +791,7 @@
                       data-bs-slide="next"
                     >
                       <span
-                        class="carousel-control-next-icon"
+                        class="carousel-control-next-icon arrow-right"
                         aria-hidden="true"
                       ></span>
                       <span class="visually-hidden">Next</span>
@@ -805,7 +803,7 @@
               <section class="reviews">
                 <h3 class="hidden-section">section excurtions reviews</h3>
 
-                <div class="reviews-container">
+                <div class="reviews-container container">
                   <h2 class="reviews-title">Отзывы</h2>
 
                   <div id="carouselExample" class="carousel slide">
@@ -821,18 +819,16 @@
                             >
                               Мир глазами историка
                             </h6>
-                            <h6
+                            <!--h6
                               class="card-subtitle mb-2 text-body-secondary guide-name"
                             >
                               <span class="span-guide-name">Гид:</span>
                               Иванов Иван Иванович
-                            </h6>
+                            </h6!-->
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
-                              содержимого карточки. Немного быстрого примера
-                              текста для построения на заголовке карточки и
-                              составления основной части содержимого карточки.
+                              содержимого карточки.
                             </p>
                             <p
                               class="card-subtitle mb-2 text-body-secondary review-date"
@@ -853,12 +849,12 @@
                             >
                               Мир глазами историка
                             </h6>
-                            <h6
+                            <!--h6
                               class="card-subtitle mb-2 text-body-secondary guide-name"
                             >
                               <span class="span-guide-name">Гид:</span>
                               Иванов Иван Иванович
-                            </h6>
+                            </h6!-->
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
@@ -884,12 +880,12 @@
                             >
                               Мир глазами историка
                             </h6>
-                            <h6
+                            <!--h6
                               class="card-subtitle mb-2 text-body-secondary guide-name"
                             >
                               <span class="span-guide-name">Гид:</span>Иванов
                               Иван Иванович
-                            </h6>
+                            </h6!-->
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
@@ -934,7 +930,6 @@
               </section>
             </details>
           </div>
-
           <div class="item-cart item-cart-details">
             <div class="item-cart-img">
               <div class="item-cart-desc">
@@ -1139,25 +1134,25 @@
                     class="carousel slide"
                     data-bs-ride="carousel"
                   >
-                    <div class="carousel-inner">
+                    <div class="carousel-inner carousel-item-border">
                       <div class="carousel-item active">
                         <img
                           src="./img/item-primary-school-science1.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
                           src="./img/item-primary-school-science2.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
                           src="./img/item-primary-school-science3.jpeg"
-                          class="d-block w-100"
+                          class="d-block w-100 carousel-item-border"
                           alt="primary-school-science"
                         />
                       </div>
@@ -1169,7 +1164,7 @@
                       data-bs-slide="prev"
                     >
                       <span
-                        class="carousel-control-prev-icon"
+                        class="carousel-control-prev-icon arrow-left"
                         aria-hidden="true"
                       ></span>
                       <span class="visually-hidden">Previous</span>
@@ -1181,7 +1176,7 @@
                       data-bs-slide="next"
                     >
                       <span
-                        class="carousel-control-next-icon"
+                        class="carousel-control-next-icon arrow-right"
                         aria-hidden="true"
                       ></span>
                       <span class="visually-hidden">Next</span>
@@ -1193,7 +1188,7 @@
               <section class="reviews">
                 <h3 class="hidden-section">section excurtions reviews</h3>
 
-                <div class="reviews-container">
+                <div class="reviews-container container">
                   <h2 class="reviews-title">Отзывы</h2>
 
                   <div id="carouselExample" class="carousel slide">
@@ -1209,18 +1204,16 @@
                             >
                               Мир глазами историка
                             </h6>
-                            <h6
+                            <!--h6
                               class="card-subtitle mb-2 text-body-secondary guide-name"
                             >
                               <span class="span-guide-name">Гид:</span>
                               Иванов Иван Иванович
-                            </h6>
+                            </h6!-->
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
-                              содержимого карточки. Немного быстрого примера
-                              текста для построения на заголовке карточки и
-                              составления основной части содержимого карточки.
+                              содержимого карточки.
                             </p>
                             <p
                               class="card-subtitle mb-2 text-body-secondary review-date"
@@ -1241,12 +1234,12 @@
                             >
                               Мир глазами историка
                             </h6>
-                            <h6
+                            <!--h6
                               class="card-subtitle mb-2 text-body-secondary guide-name"
                             >
                               <span class="span-guide-name">Гид:</span>
                               Иванов Иван Иванович
-                            </h6>
+                            </h6!-->
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
@@ -1272,12 +1265,12 @@
                             >
                               Мир глазами историка
                             </h6>
-                            <h6
+                            <!--h6
                               class="card-subtitle mb-2 text-body-secondary guide-name"
                             >
                               <span class="span-guide-name">Гид:</span>Иванов
                               Иван Иванович
-                            </h6>
+                            </h6!-->
                             <p class="card-text review-text">
                               Немного быстрого примера текста для построения на
                               заголовке карточки и составления основной части
